Bug 806029 - Have remote content drop their buffers when they're hidden. r=mattwoodrow, sr=roc, a=blocking-basecamp