gfx/layers/opengl/ContainerLayerOGL.cpp
@@ -490,6 +490,7 @@ ShadowRefLayerOGL::RenderLayer(int aPreviousFrameBuffer,
 void
 ShadowRefLayerOGL::CleanupResources()
 {
+  MOZ_ASSERT(!mFirstChild);
 }
 
 } /* layers */
